--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.io": "^1.8.1",
     "fs": "0.0.2",
-    "lodash": "~4.6.1"
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^1.0.0"
   }
 }
