--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.io": "^1.8.1",
     "fs": "0.0.2",
     "grunt": "^0.4.5",
-    "grunt-contrib-copy": "^1.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "lodash": "^4.6.1"
   }
 }
