--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "fs": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-curl": "^2.2.0",
+    "grunt-mkdir": "^1.0.0",
     "lodash": "^4.6.1"
   }
 }
