--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "MIT",
   "dependencies": {
     "discord.io": "^1.8.1",
+    "forecast": "^0.2.1",
     "fs": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-curl": "^2.2.0",
     "grunt-mkdir": "^1.0.0",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "moment": "^2.12.0",
+    "node-geocoder": "^3.8.0"
   }
 }
